# quantum-meter-pro

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_STREAMLIT.md  bandit-report.json  main.py  pyproject.toml  requirements-dev.txt  requirements-streamlit-minimal.txt  requirements-streamlit.txt  requirements.txt  setup.py  streamlit_app.py  streamlit_app_simple.py
.github/: PULL_REQUEST_TEMPLATE.md  description.md  topics.txt  website.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
config/: devices.yaml
data/: sample_quantum_data.csv
docs/: Gemfile  README.md  _config.yml  home.md  index.html  index.md  presentation.md
docs/assets/: README.md
src/web/: app.py
src/web/templates/: dashboard.html
